// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <label
    class="label other-class this-is-a-test"
  >
    <p>
      Default
    </p>
  </label>
</DocumentFragment>
`;

exports[`Label component should render 1`] = `
<DocumentFragment>
  <label
    class="label"
  />
</DocumentFragment>
`;

exports[`Label component should use inline styles 1`] = `
<DocumentFragment>
  <label
    class="label"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </label>
</DocumentFragment>
`;
